--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - "/etc/nginx/conf.d"
       - "/etc/nginx/vhost.d"
       - "/usr/share/nginx/html"
-      - "./certs:/etc/nginx/certs:ro"
+      - "certs:/etc/nginx/certs:ro"
     networks:
       - proxy-tier
   nginx-gen:
@@ -32,7 +32,7 @@ services:
       - nginx
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "./certs:/etc/nginx/certs:rw"
+      - "certs:/etc/nginx/certs:rw"
     environment:
       - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
 
@@ -49,3 +49,6 @@ services:
 networks:
   proxy-tier:
   db-tier:
+
+volumes:
+  certs:
