--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,52 +2,45 @@ version: '2'
 
 services:
   nginx:
-    image: nginx
+    image: demostf/demos.tf
     container_name: nginx
     ports:
-      - "80:80"
-      - "443:443"
+      - "${PORT}:80"
+      - "${HTTPS_PORT}:443"
     volumes:
-      - "/etc/nginx/conf.d"
-      - "/etc/nginx/vhost.d"
-      - "/usr/share/nginx/html"
       - "certs:/etc/nginx/certs:ro"
+      - "./api.tmpl:/etc/nginx/conf.d/api.tmpl"
+    environment:
+     - HOST=${HOST}
     networks:
       - proxy-tier
-  nginx-gen:
-    image: jwilder/docker-gen
-    container_name: nginx-gen
-    volumes:
-      - "/var/run/docker.sock:/tmp/docker.sock:ro"
-      - "./nginx.tmpl:/etc/docker-gen/templates/nginx.tmpl:ro"
-      - "./demostf-nginx.conf:/etc/nginx/vhost.d/${HOST}"
-    volumes_from:
-      - nginx
-    entrypoint: /usr/local/bin/docker-gen -notify-sighup nginx -watch -wait 5s:30s /etc/docker-gen/templates/nginx.tmpl /etc/nginx/conf.d/default.conf
+    depends_on:
+      - api
+  api:
+    image: demostf/api
+    container_name: api
     environment:
-      - ENABLE_IPV6=true
+      - DB_TYPE=pgsql
+      - DB_HOST=db
+      - DB_DATABASE=postgres
+      - DB_USERNAME=postgres
+      - DB_PASSWORD=${DB_PASSWORD}
     networks:
       - proxy-tier
-  letsencrypt-nginx-proxy-companion:
-    image: jrcs/letsencrypt-nginx-proxy-companion
-    container_name: letsencrypt-nginx-proxy-companion
-    volumes_from:
-      - nginx
-    volumes:
-      - "/var/run/docker.sock:/var/run/docker.sock:ro"
-      - "certs:/etc/nginx/certs:rw"
-    environment:
-      - NGINX_DOCKER_GEN_CONTAINER=nginx-gen
+      - db-tier
+  upload:
+    image: nginx
+    container_name: upload
 
-  demostf:
-    image: demostf/demos.tf
-    container_name: demostf
+  db:
+    image: demostf/db
+    container_name: db
     environment:
-      - VIRTUAL_HOST=${HOST}
-      - LETSENCRYPT_HOST=${HOST}
-      - LETSENCRYPT_EMAIL=${EMAIL}
+      - POSTGRES_PASSWORD=${DB_PASSWORD}
+    volumes:
+      - "./db_data:/var/lib/postgresql/data"
     networks:
-      - proxy-tier
+      - db-tier
 
 networks:
   proxy-tier:
