--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,15 +11,20 @@ services:
       - "./api.tmpl:/etc/nginx/conf.d/api.tmpl"
       - "./static.tmpl:/etc/nginx/conf.d/static.tmpl"
       - "./sync.tmpl:/etc/nginx/conf.d/sync.tmpl"
+      - "./piwik.tmpl:/etc/nginx/conf.d/piwik.tmpl"
       - "${DEMO_ROOT}:/demos"
+    volumes_from:
+      - piwik
     environment:
      - HOST=${HOST}
      - UPLOAD_FASTCGI=api:9000
      - UPLOAD_SCRIPT=/app/src/public/upload.php
     networks:
       - proxy-tier
+      - piwik-tier
     depends_on:
       - api
+      - piwik
   api:
     image: demostf/api
     container_name: api
@@ -68,10 +73,33 @@ services:
     networks:
       - db-tier
 
+  piwik-db:
+    image: mysql
+    container_name: piwik-db
+    volumes:
+      - ./piwik_db_data:/var/lib/mysql
+    environment:
+      - MYSQL_ROOT_PASSWORD=${DB_PASSWORD}
+    networks:
+      - piwik-db-tier
+
+  piwik:
+    image: piwik:fpm
+    container_name: piwik
+    links:
+      - db
+    volumes:
+      - ./piwik_config:/var/www/html/config
+    networks:
+      - piwik-db-tier
+      - piwik-tier
+
 networks:
   proxy-tier:
   db-tier:
   parser-tier:
+  piwik-tier:
+  piwik-db-tier:
 
 volumes:
   certs:
