--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -93,6 +93,20 @@ services:
     networks:
       - piwik-db-tier
       - piwik-tier
+  cron:
+    image: piwik:fpm
+    links:
+      - db
+    volumes_from:
+      - app
+    entrypoint: |
+      bash -c 'bash -s <<EOF
+      trap "break;exit" SIGHUP SIGINT SIGTERM
+      while /bin/true; do
+        su -s "/bin/bash" -c "/usr/local/bin/php /var/www/html/console core:archive" www-data
+        sleep 3600
+      done
+      EOF'
 
 networks:
   proxy-tier:
