set certbot email

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -78,6 +78,7 @@ services:
     environment:
     - HOST=$HOST
     - TARGET=nginx
+    - CERTBOT_EMAIL=$EMAIL
     networks:
     - proxy-tier
     ports:
