--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -66,6 +66,7 @@ services:
     container_name: db
     environment:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
+      - POSTGRES_INITDB_ARGS="--no-locale -E=UTF8"
     volumes:
       - "./db_data:/var/lib/postgresql/data"
     networks:
