--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -105,10 +105,11 @@ services:
       - /sys:/host/sys:ro
       - /:/rootfs:ro
     command:
+      - '--path.rootfs=/rootfs'
       - '--path.procfs=/host/proc'
       - '--path.sysfs=/host/sys'
       - --collector.filesystem.ignored-mount-points
-      - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
+      - "^/(sys|proc|dev|host|etc|var/lib/docker/containers|var/lib/docker/overlay2|run/docker/netns|var/lib/docker/aufs|run(|/lock|user/1000)|var/lib/lxcfs|boot/efi)($$|/)"
     ports:
       - 9100:9100
     restart: unless-stopped
