--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,7 +67,7 @@ services:
     container_name: db
     environment:
       - POSTGRES_PASSWORD=${DB_PASSWORD}
-      - POSTGRES_INITDB_ARGS="--no-locale"
+      - POSTGRES_INITDB_ARGS="--no-locale -E UTF8"
     volumes:
       - "./db_data:/var/lib/postgresql/data"
     networks:
@@ -97,22 +97,6 @@ services:
     ports:
     - "80:80"
     - "443:443"
-
-  node-exporter:
-    image: prom/node-exporter
-    volumes:
-      - /proc:/host/proc:ro
-      - /sys:/host/sys:ro
-      - /:/rootfs:ro
-    command:
-      - '--path.rootfs=/rootfs'
-      - '--path.procfs=/host/proc'
-      - '--path.sysfs=/host/sys'
-      - --collector.filesystem.ignored-mount-points
-      - "^/(sys|proc|dev|host|etc|var/lib/docker/containers|var/lib/docker/overlay2|run/docker/netns|var/lib/docker/aufs|run(|/lock|user/1000)|var/lib/lxcfs|boot/efi)($$|/)"
-    ports:
-      - 9100:9100
-    restart: unless-stopped
 
 networks:
   proxy-tier:
