--- a/promtail.yml
+++ b/promtail.yml
@@ -6,7 +6,7 @@ positions:
   filename: /positions/positions.yaml
 
 clients:
-  - url: https://${LOKI}/loki/api/v1/push
+  - url: ${LOKI}
 
 scrape_configs:
   - job_name: nginx
