--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       - "./api.tmpl:/etc/nginx/conf.d/api.tmpl"
       - "./static.tmpl:/etc/nginx/conf.d/static.tmpl"
       - "./sync.tmpl:/etc/nginx/conf.d/sync.tmpl"
+      - "./maps.tmpl:/etc/nginx/conf.d/maps.tmpl"
       - "${DEMO_ROOT}:/demos"
     environment:
      - HOST=${HOST}
@@ -57,6 +58,13 @@ services:
     image: demostf/sync
     container_name: sync
     mem_limit: 128m
+    networks:
+      - proxy-tier
+  
+  maps:
+    restart: always
+    image: demostf/maps
+    container_name: maps
     networks:
       - proxy-tier
 
