--- a/promtail.yml
+++ b/promtail.yml
@@ -6,7 +6,10 @@ positions:
   filename: /positions/positions.yaml
 
 clients:
-  - url: ${LOKI}
+  - url: ${LOKI_URL}
+    basic_auth:
+      username: ${LOKI_USERNAME}
+      password: ${LOKI_PASSWORD}
 
 scrape_configs:
   - job_name: nginx
